fix : right header button invisible on tablets with sticky headers Case: SVY-4409

--- a/servoy_mobile/src/com/servoy/mobile/public/servoy.css
+++ b/servoy_mobile/src/com/servoy/mobile/public/servoy.css
@@ -62,6 +62,10 @@ label.label-labelfor
 }
 
 @media (min-width: 45em){
+	.ui-panel-content-fixed-toolbar-position-left.ui-panel-content-fixed-toolbar-display-reveal.ui-panel-content-fixed-toolbar-open {
+		width: auto;
+		right: 0;
+	}
 	.ui-panel-content-wrap-position-left.ui-panel-content-wrap-display-reveal.ui-panel-content-wrap-open {
 		margin-right: 17em;
 	}
